[package]
name = "odoh-client-rs"
version = "0.1.7"
authors = [ "Tanya Verma <tverma@cloudflare.com>" ]
edition = "2018"
license = "BSD-2-Clause"
description = "Rust client for Oblivious DNS over HTTPS (ODoH) protocol draft-03"
repository = "https://github.com/cloudflare/odoh-client-rs/"
keywords = [ "odoh", "protocols", "dns", "doh", "privacy" ]
categories = [ "network-programming", "cryptography" ]

[dependencies]
anyhow = "1"
clap = "2.33"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4"
odoh-rs = "0.1.8"
rand = "0.7"
regex = "1"
reqwest = { version = "0.11", features = [ "cookies" ] }
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1", features = [ "full" ] }
toml = "0.5"
trust-dns-client = "0.20"
trust-dns-proto = "0.20"
url = "2.2"

[dev-dependencies]
assert_cmd = "1"